# contracts/openapi.yaml
@@ -926,7 +926,20 @@ components:
 
     Item:
       type: object
-      required: [id, sellerId, categoryId, title, price, quantity, availableQuantity, status, images, createdAt, updatedAt]
+      required:
+        [
+          id,
+          sellerId,
+          categoryId,
+          title,
+          price,
+          quantity,
+          availableQuantity,
+          status,
+          images,
+          createdAt,
+          updatedAt,
+        ]
       properties:
         id:
           type: integer
@@ -1046,7 +1059,18 @@ components:
 
     Order:
       type: object
-      required: [id, orderNo, buyerId, itemId, quantity, totalPrice, status, createdAt, updatedAt]
+      required:
+        [
+          id,
+          orderNo,
+          buyerId,
+          itemId,
+          quantity,
+          totalPrice,
+          status,
+          createdAt,
+          updatedAt,
+        ]
       properties:
         id:
           type: integer
